src/objects/PropertyHW__c.object
<CustomObject>
    <description>Custom Property object for homework #2</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PropertiesHW</relationshipLabel>
        <relationshipName>PropertiesHW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_From__c</fullName>
        <label>Available From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_To__c</fullName>
        <label>Available To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheapest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cheapest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if property with same name already exists</description>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Image__c</fullName>
        <label>Property Image</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Title__c</fullName>
        <label>Property Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PropertyHW</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Duplicate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PropertiesHW</pluralLabel>
    <recordTypes>
        <fullName>Rent</fullName>
        <active>true</active>
        <label>Rent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sale</fullName>
        <active>true</active>
        <label>Sale</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AvailableFromToConsistency</fullName>
        <active>true</active>
        <errorConditionFormula>Available_To__c &lt; Available_From__c</errorConditionFormula>
        <errorMessage>Available_Due cannot be before Available From</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PriceNonNegative</fullName>
        <active>true</active>
        <errorConditionFormula>Price__c &lt; 0.0</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>Price cannot be less than Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PriceNotEmpty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Price__c)</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>Price cannot be empty</errorMessage>
    </validationRules>
</CustomObject>